# tamagotchi-battle

./: .gitignore  Cargo.toml  build.rs  meta.txt
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs
tests/: escrow_test.rs
